fixed label placeholder spacing

--- a/src/index.css
+++ b/src/index.css
@@ -815,6 +815,10 @@ html, body {
         color: white;
         font-size: 1.5rem;
     }
+
+    .container input::placeholder {
+        font-size: 1.5rem;
+    }
     
     input[type='text'],
     select {
